2003-07-09  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03934] Re: clear image
	* w3mimg/x11/x11_w3mimg.c (x11_clear): s/FALSE/False/

2003-07-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03931] Re: clear image
	* w3mimgdisplay.c (ClearImage): offset
	* w3mimg/fb/fb.c (fb_clear): memcpy by pixel_size

2003-07-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03929] clear image
	* image.c (syncImage): added
		(drawImage): rewrite using syncImage()
		(clearImage): use clear image command (6)
	* w3mimgdisplay.c: change protocol
		2 => terminate drawing
		6 => clear image
		(main): '2' calls TermImage()
			'6' calls ClearImage()
			TermImage() when exit
		(TermImage): renamed from ClearImage
		(ClearImage): rewritten to call w_op->clear()
	* w3mimg.h/w3mimg.h (w3mimg_op): add clear()
	* w3mimg/fb/fb.c (fb_clear): added
	* w3mimg/fb/fb.h (fb_clear): added
	* w3mimg/fb/fb_img.c (fb_image_clear): added
	* w3mimg/fb/fb_w3mimg.c (w3mfb_clear): added
		(w3mimg_fbopen): initialize wop->clear
	* w3mimg/x11/x11_w3mimg.c (x11_clear): added
		(w3mimg_x11open): initialize wop->clear

2003-07-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03927] deflate
	* file.c (compression_decoder): .deflate for application/x-deflate's
				extension

2003-06-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03916] Re: charset attribute of anchor tag
	 requested by TSUCHIYA Masatoshi <tsuchiya@pine.kuee.kyoto-u.ac.jp>
	 for emacs-w3m
	* html.c (ALST_A): add ATTR_CHARSET
		(MAXA_A): +1

2003-06-18  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03914] a fragment in the Referer URI
	* url.c (otherinfo): strip URI fragment

2003-06-13  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03913] fix gif animation support
	* w3mimg/fb/fb_gdkpixbuf.c (fb_image_load): fix gif animation
	* w3mimg/x11/x11_w3mimg.c (x11_load_image): ditto

2003-05-15  Akinori Ito <aito@fw.ipsj.or.jp>

	* [w3m-dev 03902] Re: table rendering